# FHE_start

fhe_cnn_mnist/: CMakeLists.txt  README.md  inference.cpp  io.hpp
fhe_cnn_mnist/data/weights/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.bias.txt  fc1.weight.txt  fc2.bias.txt  fc2.weight.txt  fc3.bias.txt  fc3.weight.txt  shapes.txt
fhe_cnn_mnist/include/fhe_cnn/: bootstrapping.hpp  conv2d.hpp  fc.hpp  onehot.hpp  pooling.hpp  relu.hpp  utils.hpp
fhe_cnn_mnist/scripts/: prototype.py
fhe_cnn_mnist/src/: main.cpp  main_fin.cpp  main_parr.cpp
fhe_cnn_mnist/src/layers/: bootstrapping.cpp  conv2d.cpp  fc.cpp  onehot.cpp  pooling.cpp  relu.cpp
fhe_cnn_mnist/src/utils/: io_utils.cpp  key_utils.cpp  metrics.cpp  packing.cpp  scaling.cpp
fhe_cnn_mnist/tests/: test_bootstrap.cpp  test_conv2d.cpp  test_fc.cpp  test_onehot.cpp  test_pooling.cpp  test_relu.cpp
fhe_exercises/: CMakeLists.txt
fhe_exercises/src/: diagonal_bsgs.cpp  diagonal_method.cpp  goldschmidt.cpp  horner.cpp  rotate_sum.cpp  rotate_sum_simd.cpp  row_method.cpp
